# disable_gc

./: README.md  README.rst  changelog.md  disable_gc.py  setup.cfg  tests.py
.github/workflows/: release.yml  test.yml
scripts/: upload_real.bat  upload_test.bat
