[metadata]
name = disable_gc
version = 0.0.1a
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = disable_gc
python_requires = >=3
